# course_work

./: CMakeLists.txt  main.cpp
classes/: ChoiceException.h  Computers.cpp  Computers.h  FIleException.h  ID_Exception.h  Interface.h  MacOS_PC.cpp  MacOS_PC.h  Methods.cpp  Methods.h  PasswordException.h  TypeException.h  WindowsOS_PC.cpp  WindowsOS_PC.h
data-base/: Inspectors.txt  au1.txt  au2.txt  broken_au1.txt  broken_au2.txt  broken_in_fix_au1.txt  broken_in_fix_au2.txt
